fix log message

--- a/install
+++ b/install
@@ -8,7 +8,7 @@ echo "=> Installing environment temperature logger...\n"
 sudo cp env-temp.py /usr/local/bin/
 sudo chmod +x /usr/local/bin/env-temp.py
 
-echo "=> Starting shutdown environment temperature logger...\n"
+echo "=> Starting environment temperature logger...\n"
 sudo cp env-temp.sh /etc/init.d/
 sudo chmod +x /etc/init.d/env-temp.sh
 
